k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-backlog-api
  namespace: anime-backlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime-backlog-api
  template:
    metadata:
      labels:
        app: anime-backlog-api
    spec:
      containers:
        - name: api
          image: skeirs/anime-backlog-api:31c851f7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 43968
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
