k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-backlog-api
  namespace: anime-backlog
spec:
  selector:
    app: anime-backlog-api
  ports:
    - name: http
      port: 43968
      targetPort: http
  type: ClusterIP
