k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-backlog-frontend
  namespace: anime-backlog
spec:
  type: ClusterIP
  selector:
    app: anime-backlog-frontend
  ports:
    - name: http
      port: 20773
      targetPort: http
