k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-backlog
  namespace: anime-backlog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anime-backlog-frontend
                port:
                  number: 20773
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: anime-backlog-api
                port:
                  number: 43968
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: anime-backlog-api
                port:
                  number: 43968
